k8s/deployment-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: sharing
    type: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      type: postgres-deployment
  template:
    metadata:
      labels:
        type: postgres-deployment
    spec:
      containers:
        - name: postgres
          imagePullPolicy: IfNotPresent
          image: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
              name: postgres-port
