k8s/deployment-sharing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharing-deploy
  labels:
    app: sharing
    type: sharing-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      type: sharing-deploy
  template:
    metadata:
      labels:
        type: sharing-deploy
    spec:
      containers:
        - name: sharing
          image: sharing
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
              name: sharing-port
