k8s/minikube-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: minikube-demo
  name: minikube-demo
  labels:
    app: minikube-demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: web
    - port: 5432
      targetPort: 5432
      name: db
  selector:
    app: minikube-demo
