k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: sharing
    type: postgres-service
spec:
  type: ClusterIP
  selector:
    type: postgres-deployment
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres-port
      protocol: TCP
