k8s/service-monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  labels:
    app: sharing
    type: monitoring-service
spec:
  type: ClusterIP
  selector:
    type: monitoring-deploy
  ports:
    - port: 9090
      targetPort: 9090
      name: prometheus-port
      protocol: TCP
    - port: 3000
      targetPort: 3000
      name: grafana-port
      protocol: TCP
