k8s/service-sharing.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-sharing
  labels:
    app: sharing
    type: sharing-service
spec:
  type: NodePort
  selector:
    type: sharing-deploy
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: sharing-port
