k8s/minikube-demo-http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-demo-http
  namespace: minikube-demo
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: ${APP_DEV_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minikube-demo
                port:
                  name: web
